<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:barrierMargin="@dimen/material_emphasis_disabled"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="789dp"
        android:contentDescription="@string/banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reitoria_horizontal_1" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="401dp"
        android:layout_height="55dp"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="500dp"
        android:ems="10"
        android:hint="SENHA"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="402dp"
        android:layout_height="59dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="450dp"
        android:text="@string/checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button3"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="450dp"
        android:background="#B30505"
        android:backgroundTint="#E40000"
        android:clickable="true"
        android:foregroundTint="#FF0E0E"
        android:text="@string/logar"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#4CAF50"
        android:textColorHint="#F80000"
        android:textColorLink="#3FC544"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="401dp"
        android:layout_height="25dp"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="390dp"
        android:text="@string/recuperarSenha"
        android:textColor="#2A4AEA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="330dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="330dp"
        android:text="@string/guest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>